force-app/main/default/objects/Campaign/fields/FQS_Campaign_Category__c.field-meta.xml
<CustomField>
    <fullName>FQS_Campaign_Category__c</fullName>
    <description>Fundraising Quick Start: identifies the fundraising purpose of the campaign. Drives list view segmentation and page layout context.</description>
    <label>Campaign Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fundraising Top Level Campaign</fullName>
            </value>
            <value>
                <fullName>Annual Giving</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Corporate Match</fullName>
            </value>
            <value>
                <fullName>In-Kind</fullName>
            </value>
            <value>
                <fullName>Major Gifts</fullName>
            </value>
            <value>
                <fullName>Planned Giving</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>