force-app/main/default/objects/Campaign/fields/FQS_Child_Campaign_Count__c.field-meta.xml
<CustomField>
    <fullName>FQS_Child_Campaign_Count__c</fullName>
    <description>Fundraising Quick Start: count of direct child campaigns. Maintained by FQS_Campaign_Child_Count_Update (after save) and FQS_Campaign_Child_Count_Delete (before delete) record-triggered flows.</description>
    <label>Child Campaign Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>