force-app/main/default/objects/Campaign/fields/FQS_Create_Default_Outreach_Sources__c.field-meta.xml
<CustomField>
    <fullName>FQS_Create_Default_Outreach_Sources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fundraising Quick Start: audit + trigger flag for the default OutreachSourceCode auto-created on Tactical-level Campaigns (FQS_Hierarchy_Depth__c &gt;= 3). Set to true by FQS_CampaignHierarchyBuilder after it provisions the default OSC. If flipped from false to true manually, the FQS_Campaign_Create_Default_OSCs record-triggered flow calls FQS_OutreachSourceCodeBuilder to (re)create the default OSC. Idempotent via External_Id__c = 'FQS-OSC-{CampaignId18}-DEFAULT'.</description>
    <inlineHelpText>Indicates the default Outreach Source Code has been auto-provisioned. Set automatically by hierarchy builder; can be checked manually to (re)create the default OSC on a Tactical-level campaign. Idempotent — safe to re-check.</inlineHelpText>
    <label>Create Default Outreach Sources</label>
    <type>Checkbox</type>
</CustomField>