force-app/main/default/objects/Campaign/fields/FQS_Create_First_Outreach_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>FQS_Create_First_Outreach_Source_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fundraising Quick Start: audit + trigger flag for the placeholder OutreachSourceCode ("Create First OSC") auto-created on Tactical-level Campaigns (FQS_Hierarchy_Depth__c &gt;= 3). Set to true by FQS_CampaignHierarchyBuilder after the Ask inserts. If flipped from false to true manually, the FQS_Campaign_Create_First_OSC record-triggered flow creates the placeholder. Idempotent via External_Id__c = 'FQS-OSC-{CampaignId15}-DEFAULT' — flow no-ops if a placeholder already exists.</description>
    <inlineHelpText>Indicates the "Create First OSC" placeholder has been auto-provisioned. Set automatically by hierarchy builder; can be checked manually to (re)create the placeholder on a Tactical-level campaign. Idempotent — safe to re-check.</inlineHelpText>
    <label>Create First Outreach Source Code</label>
    <type>Checkbox</type>
</CustomField>