force-app/main/default/objects/Campaign/fields/FQS_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>FQS_Short_Name__c</fullName>
    <description>Fundraising Quick Start: short, URL-safe identifier for use in UTM campaign codes and Outreach Summary source tracking. Lowercase alphanumeric and hyphens recommended (e.g. `fy26-yearend-email`). Read by Outreach Source Code naming conventions; not enforced as unique.</description>
    <inlineHelpText>Equivalent to `utm_campaign` in web analytics. Used as the campaign segment when naming Outreach Source Codes. Also use this value directly as `utm_campaign` on any URLs promoted by this campaign. Lowercase, alphanumeric and hyphens only.</inlineHelpText>
    <label>Short Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>