force-app/main/default/objects/Campaign/fields/FQS_Ultimate_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>FQS_Ultimate_Parent_Campaign__c</fullName>
    <description>Fundraising Quick Start: walks up to 5 levels of campaign hierarchy to return the name of the topmost ancestor. Returns the campaign&apos;s own name when it has no parent.</description>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Name)), Parent.Name, Name)))))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Ultimate Parent Campaign</label>
    <type>Text</type>
</CustomField>