force-app/main/default/objects/Campaign/recordTypes/FQS_Fundraising.recordType-meta.xml
<RecordType>
    <fullName>FQS_Fundraising</fullName>
    <active>true</active>
    <description>Fundraising Quick Start: record type for all nonprofit fundraising campaigns. Restricts access to FQS permission set holders.</description>
    <label>Fundraising</label>
</RecordType>