force-app/main/default/objects/Campaign/listViews/FQS_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>FQS_Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>FQS_Campaign_Category__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Fundraising Campaigns</label>
</ListView>