force-app/main/default/objects/Campaign/listViews/FQS_Annual_Giving_Campaigns.listView-meta.xml
<ListView>
    <fullName>FQS_Annual_Giving_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Campaign_Category__c</field>
        <operation>equals</operation>
        <value>Annual Giving</value>
    </filters>
    <label>Annual Giving Campaigns</label>
</ListView>