force-app/main/default/objects/Campaign/listViews/FQS_Major_Gifts_Campaigns.listView-meta.xml
<ListView>
    <fullName>FQS_Major_Gifts_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Campaign_Category__c</field>
        <operation>equals</operation>
        <value>Major Gifts</value>
    </filters>
    <label>FQS Major Gifts Campaigns</label>
</ListView>