force-app/main/default/objects/Campaign/listViews/FQS_My_Fundraising_Campaigns.listView-meta.xml
<ListView>
    <fullName>FQS_My_Fundraising_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>FQS_Campaign_Category__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Mine</filterScope>
    <label>FQS My Fundraising Campaigns</label>
</ListView>